syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";

import "returns_log.proto";

option go_package = "github.com/itsscb/df/pb";

message ListReturnsLogRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "ListReturnsLog";
          description: "Returns a List of ReturnsLog";
          required: [
            "person_id"
            ];
        };
        example: "{\"person_id\": 1 }";
    };
    uint64 person_id = 1;
}

message ListReturnsLogResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "ListReturnsLog Response";
          description: "Returns the ReturnsLog";
        };
    };
    repeated ReturnsLog returns_log = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      }];
}